# spotify-recommendation-challenge

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/01-data-exploration/: 01-initial-eda.ipynb  02-challenge-dataset-analysis.ipynb
scripts/: enrich_dataset.py
src/dataETL/: extractors.py  spotify_client.py
src/utils/logger/: logging.py  logging_manager.py
tests/: test_count.py  test_spotify.py
